--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "min-find",
-  "version": "1.1.2",
+  "version": "1.1.4",
   "description": "simple Sizzle like query selector",
   "main": "index.js",
   "scripts": {
@@ -10,10 +10,8 @@
   "author": "chunpu",
   "license": "ISC",
   "devDependencies": {
-    "poor": "^1.1.3"
-  },
-  "dependencies": {
-    "poor": "^1.1.3"
+    "poor": "^1.1.3",
+    "browserify": "latest"
   },
   "repository": {
     "type": "git",
